--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Elisp ###
 # Compiled
 *.elc
 
@@ -9,3 +10,59 @@
 
 # Undo-tree save-files
 *.~undo-tree
+
+### Emacs ###
+# -*- mode: gitignore; -*-
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+ltximg/**
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# network security
+/network-security.data
+
+
+### From flycheck ###
+# Bundler configuration and lock file
+/.bundle/
+/Gemfile.lock
+
